<resources>
    <string name="app_name">WisomNursingClass</string>
    <string name="title_activity_nav">Nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="no_data_found">No data found</string>
    <string name="text">In this article, I want to describe a few interesting facts that I found when looking for reasons for OOM errors. I hope that some of them will help you decrease the memory consumption of your app and deal with those awful errors. I focus mainly on Glide, but some of the tips may be relevant even if you use other image loading libraries</string>

    <string name="download">Download</string>
    <string name="use_history">Usage History</string>
    <string name="purchase_history">Purchase History</string>
    <string name="offline_batch">Offline Batch</string>
    <string name="selection">Our Selections</string>
    <string name="contact">Contact Us</string>
    <string name="invite">Invite Friend</string>
    <string name="logout">Logout</string>
    <string name="exit_home_message">Quit quiz? Progress will not be saved!</string>
    <string name="positive_exam_message">Quit</string>
    <string name="negative_exam_message">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_time">Test Time</string>
    <string name="paid_course">Paid Course</string>
    <string name="title">title</string>
    <string name="course_files">Course Files</string>
    <string name="settings">Settings</string>
    <string name="buy">Buy</string>
    <string name="start_test">START TEST</string>
</resources>