<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_above="@+id/navigation"
        android:layout_height="match_parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:background="#FFCA00"
        android:foreground="?attr/selectableItemBackground"
        app:itemIconTint="@color/bg"
        app:itemTextColor="@color/bg"
        app:menu="@menu/bottom_nav_menu" />

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start">
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/black"
            android:paddingBottom="40dp"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/nav_head"
                layout="@layout/nav_header_main"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_below="@+id/nav_head"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_download"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_icon"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/download"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/tv_course_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/download"
                        android:layout_toRightOf="@+id/iv_icon"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/white"/>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/layout_usage_history"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/userh"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/tv_use_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/use_history"
                        android:layout_toRightOf="@+id/iv_icon"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/white"/>


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/layout_purchase_history"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/p_h"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/tv_purchase"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/purchase_history"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/white"/>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:id="@+id/layout_offline"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/off"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/tv_offline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/offline_batch"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/white"/>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/layout_selection"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/our"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/tv_select"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selection"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/white"/>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/layout_contact"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/contact_us"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/tv_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/white"/>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linSetting"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="15dp"
                        android:src="@drawable/contact_us"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/tvsetting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/white"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_invite"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/invite"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/tv_invite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/invite"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:text="@string/logout"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/btn_back_border_yellow"
                />
        </RelativeLayout>

    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>